# generative_modelling

./: .gitignore  README.md  evaluation_results.csv  final_mnist_from_train2.pth  mnist-run-3.pth  mnist-run-4.pth  pyproject.toml  reproduction_notes.md
adv_results/: exp_L2_results_for_plotting.csv  exp_Linf_results_for_plotting.csv  exp_adversarial_results.csv  exp_clean_accuracies.csv  exp_comparative_adversarial_results.csv  exp_plotting_data.csv
nbs/: crash_distr.ipynb  modification_perf.ipynb  perf_distr.ipynb  ratio_plot.ipynb  sgld_hist.ipynb  training_curves.ipynb
src/: evaluate.py  evaluation.py  plots.py  robustness.py  toy_exps.py  train.py  train2.py
